test/files/neg/t667.check
t667.scala:8: error: class Ni inherits itself
    class Ni extends super.Ni with Ni;
                                   ^
one error found
